--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
                 <h2>Member 2</h2>
                 <p>This is Member 2’s bio.</p>
             </div>
+            <div class="card">
+                <img src="member3.jpg" alt="Member 3">
+                <h2>Member 3</h2>
+                <p>This is Member 3’s bio.</p>
+            </div>
+            <div class="card">
+                <img src="member4.jpg" alt="Member 4">
+                <h2>Member 4</h2>
+                <p>This is Member 4’s bio.</p>
+            </div>
+            <div class="card">
+                <img src="member5.jpg" alt="Member 5">
+                <h2>Member 5</h2>
+                <p>This is Member 5’s bio.</p>
+            </div>
             <!-- Add more cards for each member -->
         </div>
         </body>
