--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
             <div class="card">
                 <img src="member5.jpg" alt="Member 5">
-                <h2>Member 5</h2>
-                <p>This is Member 5’s bio.</p>
+                <h2>Roypeter Gicheru</h2>
+                <p>This is Roy Gicheru’s bio.</p>
             </div>
             <!-- Add more cards for each member -->
         </div>
