--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>This is Member 4’s bio.</p>
             </div>
             <div class="card">
-                <img src="member5.jpg" alt="Member 5">
+                <img src="images/member5.jpg" alt="Member 5">
                 <h2>Roypeter Gicheru</h2>
                 <p>This is Roy Gicheru’s bio.</p>
             </div>
