--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <body>
         <div class="container">
             <div class="card">
-                <img src="member1.jpg" alt="Member 1">
-                <h2>Member 1</h2>
-                <p>This is Member 1’s bio.</p>
+                <img src="images/background.jpg" alt="Member 1">
+                <h2>Noordin Qureish</h2>
+                <p>This is Noordin Qureish’s bio.</p>
             </div>
             <div class="card">
                 <img src="member2.jpg" alt="Member 2">
