--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <p>This is Member 2’s bio.</p>
             </div>
             <div class="card">
-                <img src="member3.jpg" alt="Member 3">
-                <h2>Member 3</h2>
+                <img src="images/potrait.jpg" alt="Member 3">
+                <h2>Michael Murei</h2>
                 <p>This is Member 3’s bio.</p>
             </div>
             <div class="card">
