--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
             <div class="card">
-                <img src="images/background.jpg" alt="Member 1">
+                <img src="images/member1.jpg" alt="Member 1">
                 <h2>Noordin Qureish</h2>
                 <p>This is Noordin Qureish’s bio.</p>
             </div>
