--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <div class="card">
                 <img src="images/member1.jpg" alt="Member 1">
                 <h2>Noordin Qureish</h2>
-                <p>This is Noordin Qureish’s bio.</p>
+                <p>This is Noordin Qureish’s bio. I am an APT major in USIU- Africa</p>
             </div>
             <div class="card">
                 <img src="member2.jpg" alt="Member 2">
