--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="card">
                 <img src="images/potrait.jpg" alt="Member 3">
                 <h2>Michael Murei</h2>
-                <p>This is Member 3’s bio.</p>
+                <p>designed and developed 10 application per year. Major expertise in Machine learning with Python</p>
             </div>
             <div class="card">
                 <img src="member4.jpg" alt="Member 4">
