--- a/index.html
+++ b/index.html
@@ -1,19 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>APP 4080 Group work</title>
-</head>
-<body>
-
-</body>
-=======
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
         
     <body>
@@ -25,8 +16,8 @@
             </div>
             <div class="card">
                 <img src="member2.jpg" alt="Member 2">
-                <h2>Member 2</h2>
-                <p>This is Member 2’s bio.</p>
+                <h2>Kevin Lemein</h2>
+                <p>This is Kevin Lemein's bio.</p>
             </div>
             <div class="card">
                 <img src="member3.jpg" alt="Member 3">
@@ -46,5 +37,5 @@
             <!-- Add more cards for each member -->
         </div>
         </body>
->>>>>>> 7301b97c75be971d0898705e9a9d0a8aa8c0974d
+
 </html>
