--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
         <link rel="stylesheet" href="style.css">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" 
+        rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" 
+        crossorigin="anonymous">
     </head>
         
     <body>
+
+        <nav>
+
+        </nav>
         <div class="container">
             <div class="card">
-                <img src="images/member1.jpg" alt="Member 1">
+                <center><img src="images/member1.jpg" alt="Member 1"></center>
                 <h2>Noordin Qureish</h2>
                 <p>This is Noordin Qureish’s bio. I am an APT major in USIU- Africa</p>
             </div>
@@ -20,7 +27,7 @@
                 <p>This is Kevin Lemein's bio.</p>
             </div>
             <div class="card">
-                <img src="images/potrait.jpg" alt="Member 3">
+                <center><img src="images/potrait.jpg" alt="Member 3"></center>
                 <h2>Michael Murei</h2>
                 <p>designed and developed 10 application per year. Major expertise in Machine learning with Python</p>
             </div>
@@ -30,7 +37,7 @@
                 <p>Rick and Morty is an American adult animated science-fiction sitcom created by Justin Roiland and Dan Harmon for Cartoon Network's nighttime programming block Adult Swim. It is distributed internationally by Warner Bros. Television Distribution.</p>
             </div>
             <div class="card">
-                <img src="images/member5.jpg" alt="Member 5">
+                <center><img src="images/member5.jpg" alt="Member 5"></center>
                 <h2>Roypeter Gicheru</h2>
                 <p>This is Roy Gicheru’s bio.</p>
             </div>
