--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="card">
                 <center><img src="images/member5.jpg" alt="Member 5"></center>
                 <h2>Roypeter Gicheru</h2>
-                <p>This is Roy Gicheru’s bio.</p>
+                <p>When being a football supporter, one underrated value is silence. Some football fans (Manchester United) might lack this basic skill. So please, let us wholistically teach them this trait so we all can live in peace.</p>
             </div>
             <!-- Add more cards for each member -->
         </div>
