--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
                 <p>This is Noordin Qureish’s bio. I am an APT major in USIU- Africa</p>
             </div>
             <div class="card">
-                <img src="member2.jpg" alt="Member 2">
+                <center><img src="images/member2.jpg" alt="Member 2"></center>
                 <h2>Kevin Lemein</h2>
                 <p>This is Kevin Lemein's bio.</p>
             </div>
             <div class="card">
                 <center><img src="images/potrait.jpg" alt="Member 3"></center>
                 <h2>Michael Murei</h2>
-                <p>designed and developed 10 application per year. Major expertise in Machine learning with Python</p>
+                <p>Designed and developed 10 applications per year. Major expertise in Machine learning with Python.</p>
             </div>
             <div class="card">
-                <img src="member4.jpg" alt="Member 4">
+                <center><img src="images/member4.jfif" alt="Member 4"></center>
                 <h2>Rick and Morty</h2>
                 <p>Rick and Morty is an American adult animated science-fiction sitcom created by Justin Roiland and Dan Harmon for Cartoon Network's nighttime programming block Adult Swim. It is distributed internationally by Warner Bros. Television Distribution.</p>
             </div>
