--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <p>Designed and developed 10 applications per year. Major expertise in Machine learning with Python.</p>
             </div>
             <div class="card">
-                <center><img src="images/member4.jfif" alt="Member 4"></center>
+                <center><img src="images/member4.jpg" alt="Member 4"></center>
                 <h2>Rick and Morty</h2>
                 <p>Rick and Morty is an American adult animated science-fiction sitcom created by Justin Roiland and Dan Harmon for Cartoon Network's nighttime programming block Adult Swim. It is distributed internationally by Warner Bros. Television Distribution.</p>
             </div>
