--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </head>
         
     <body>
+        <h1>Group 6 Profiles</h1>
         <div class="container">
             <div class="card">
                 <center><img src="images/member1.jpg" alt="Member 1"></center>
