--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="card">
                 <center><img src="images/member4.jpg" alt="Member 4"></center>
                 <h2>Bill Musani</h2>
-                <p>Rick and Morty is an American adult animated science-fiction sitcom created by Justin Roiland and Dan Harmon for Cartoon Network's nighttime programming block Adult Swim. It is distributed internationally by Warner Bros. Television Distribution.</p>
+                <p>An IT professional is a highly skilled and knowledgeable individual who is responsible for maintaining and managing the technology infrastructure and systems within an organization.</p>
             </div>
             <div class="card">
                 <center><img src="images/member5.jpg" alt="Member 5"></center>
