--- a/index.html
+++ b/index.html
@@ -11,35 +11,36 @@
     </head>
         
     <body>
-        <h1>Group 6 Profiles</h1>
-        <div class="container">
-            <div class="card">
-                <center><img src="images/member1.jpg" alt="Member 1"></center>
-                <h2>Noordin Qureish</h2>
-                <p>This is Noordin Qureish’s bio. I am an APT major in USIU- Africa</p>
+        <main>
+            <h1>Group 6 Profiles</h1>
+            <div class="container">
+                <div class="card">
+                    <center><img src="images/member1.jpg" alt="Member 1"></center>
+                    <h2>Noordin Qureish</h2>
+                    <p>This is Noordin Qureish’s bio. I am an APT major in USIU- Africa</p>
+                </div>
+                <div class="card">
+                    <center><img src="images/member2.jpg" alt="Member 2"></center>
+                    <h2>Kevin Lemein</h2>
+                    <p>This is Kevin Lemein's bio.</p>
+                </div>
+                <div class="card">
+                    <center><img src="images/potrait.jpg" alt="Member 3"></center>
+                    <h2>Michael Murei</h2>
+                    <p>Designed and developed 10 applications per year. Major expertise in Machine learning with Python.</p>
+                </div>
+                <div class="card">
+                    <center><img src="images/member4.jpg" alt="Member 4"></center>
+                    <h2>Bill Musani</h2>
+                    <p>An IT professional is a highly skilled and knowledgeable individual who is responsible for maintaining and managing the technology infrastructure and systems within an organization.</p>
+                </div>
+                <div class="card">
+                    <center><img src="images/member5.jpg" alt="Member 5"></center>
+                    <h2>Roypeter Gicheru</h2>
+                    <p>When being a football supporter, one underrated value is silence. Some football fans (Manchester United) might lack this basic skill. So please, let us wholistically teach them this trait so we all can live in peace.</p>
+                </div>
+                <!-- Add more cards for each member -->
             </div>
-            <div class="card">
-                <center><img src="images/member2.jpg" alt="Member 2"></center>
-                <h2>Kevin Lemein</h2>
-                <p>This is Kevin Lemein's bio.</p>
-            </div>
-            <div class="card">
-                <center><img src="images/potrait.jpg" alt="Member 3"></center>
-                <h2>Michael Murei</h2>
-                <p>Designed and developed 10 applications per year. Major expertise in Machine learning with Python.</p>
-            </div>
-            <div class="card">
-                <center><img src="images/member4.jpg" alt="Member 4"></center>
-                <h2>Bill Musani</h2>
-                <p>An IT professional is a highly skilled and knowledgeable individual who is responsible for maintaining and managing the technology infrastructure and systems within an organization.</p>
-            </div>
-            <div class="card">
-                <center><img src="images/member5.jpg" alt="Member 5"></center>
-                <h2>Roypeter Gicheru</h2>
-                <p>When being a football supporter, one underrated value is silence. Some football fans (Manchester United) might lack this basic skill. So please, let us wholistically teach them this trait so we all can live in peace.</p>
-            </div>
-            <!-- Add more cards for each member -->
-        </div>
-        </body>
-
+        </main>
+    </body>
 </html>
