--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="card">
                 <img src="member2.jpg" alt="Member 2">
                 <h2>Kevin Lemein</h2>
-                <p>This is Kevin Lemein's bio.</p>
+                <p>This is Kevin Lemein's bio.I am an APT major in USIU</p>
             </div>
             <div class="card">
                 <center><img src="images/potrait.jpg" alt="Member 3"></center>
@@ -32,7 +32,7 @@
                 <p>designed and developed 10 application per year. Major expertise in Machine learning with Python</p>
             </div>
             <div class="card">
-                <img src="member4.jpg" alt="Member 4">
+                <img src="member4.jfif" alt="Member 4">
                 <h2>Rick and Morty</h2>
                 <p>Rick and Morty is an American adult animated science-fiction sitcom created by Justin Roiland and Dan Harmon for Cartoon Network's nighttime programming block Adult Swim. It is distributed internationally by Warner Bros. Television Distribution.</p>
             </div>
